기존에 signature를 생성하는 메소드에서 base64 String을 파싱해 byte타입으로 반환할 때 값이 없는 에러가 있어 plain text를 utf8형식 바이트로 변환 후 base64 인코딩을 하는 코드를 추가 작성함